--- a/.github/workflows/rulebook-action.yaml
+++ b/.github/workflows/rulebook-action.yaml
@@ -37,7 +37,14 @@ jobs:
       - name: Concatenate Markdown files
         id: concatenate_markdown
         run: |
-          cat $(cat order.txt) > concatenated.md
+        while IFS= read -r line; do
+          if [ "$line" = "---" ]; then
+            echo "\n---\n" >> concatenated.md  # Insert newline
+          else
+            cat "$line" >> concatenated.md
+            echo "\n" >> concatenated.md
+          fi
+        done < order.txt
 
       - name: Convert concatenated Markdown to PDF
         run: |
